--- a/caobaweb.css
+++ b/caobaweb.css
@@ -1,39 +1,67 @@
-.nav__responsive{
+.nav__responsive-ul {
 	display: none;
 }
-.nav{
-	background-color: rgb(0, 0, 0);
-	width: 100%;
+nav {
+	background-color: slateblue;
 }
-.nav__li{
-	display: inline-block;
-	padding: 17px;
+.nav__li {
+	display:inline-block;
+	padding: 12px;
+	color: #fff;
+}
+.nav__li:hover > a {
+	color: #ccc;
+}
+.nav__li:hover > i {
+	color: #ccc;
 }
 .nav__li a {
 	color: #fff;
 	text-decoration: none;
 }
 .nav__li i {
-	width: 30px;
-	color: white;
+	box-sizing: border-box;
+	text-align: right;
+	margin-right: 5px;
+}
+.nav__responsive-button {
+	font-size: 25px;
+	float: right;
+	padding:6px 20px;
+
 }
 
 @media only screen and (max-width:500px) {
+	.nav__ul {
+		display:none ;
+	}
 
-	.nav {
-		display none;
-	}
-	.nav__ul{
-		display: none;
-	}
-	.nav__responsive {
+    .nav {
+    	height: 37px;
+    	width: 110%;
+    }
+    .nav__responsive-ul {
 		display: block;
 		position: absolute;
-		width: 100%;
-		background-color: rgb(0, 0, 0);
-	}
-	.nav {
-		height: 37px;
-		width:100%;
-	}
-}
+	    width: 90%;
+		background-color: #48e;
+		height: 100%;
+		margin-top:37px;
+	} 
+    .nav__responsive-li {
+    	width: 100%;
+    	padding: 9px 20px;
+    } 
+    .nav__responsive-li i {
+    	box-sizing: border-box;
+    	text-align: center;
+    	,margin-right: 5px;
+    	width: 30px;
+        color: #016;  
+    }
+    .nav__responsive-li a {
+    	color: #016;
+    	text-decoration: none;
+
+    }
+
